fix: log time stamp in nav wasnt wrapping correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ body.dark-mode .nav-left a.nav-link:hover {
 
 #recent-log-time {
     font-size: 0.65em;
+    white-space: nowrap;
 }
 
 .nav-right.top-nav-right {
